--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <br><br>
                 Junior com interesse na área back-end.
                     <br>
-                Atualmente estudando <strong>HTML / CSS</strong> e <strong>C</strong>.
+                Atualmente estudando <strong>C</strong> e <strong>HTML / CSS</strong>.
                     <br><br>
                 Cursando o <strong>3° ano</strong> do ensino médio.
                     <br>
