--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="https://kit.fontawesome.com/b3f377d81a.js" crossorigin="anonymous"></script>
-    <title>Site 2</title>
+
+    <title>Github CLOPSO</title>
 </head>
 <body>
     <div class="header" id="header">
