--- a/index.html
+++ b/index.html
@@ -16,11 +16,8 @@
     </div>
 
     <div class="content">
-        <div class="main">
-            <h1>Trabalhe<br>inteligente!</h1>
-        </div>
-        <div class="second">
-            <p>
+        <h1 class="main">Trabalhe<br>inteligente!</h1>
+            <p class="second">
                 Nascido em Londrina-PR no ano 2005.
                     <br>
                 Criado e morando em Rolândia-PR.
