atualizando a area fale comigo

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta
+      name="keywords"
+      content="sites, web, bio, links, redes sociais, desenvolvimento, programador, clopso, front-end, back-end,designer, ui, iuri, freelancer, freela, website"
+    />
     <link rel="stylesheet" href="css/styles.css"/>
     <script src="https://kit.fontawesome.com/b3f377d81a.js" crossorigin="anonymous"></script>
 
@@ -22,7 +26,7 @@
                     <br>
                 Criado e morando em Rolândia-PR.
                     <br><br>
-                Junior com interesse na área back-end.
+                Desenvolvedor junior interessado em back-end.
                     <br>
                 Atualmente estudando <strong>C</strong> e <strong>HTML / CSS</strong>.
                     <br><br>
@@ -37,7 +41,10 @@
     </div>
 
     <div class="falecmg" id="falecmg">
-        
+        <div class="twitter"></div>
+        <div class="discord"></div>
+        <div class="github"></div>
+        <div class="email"></div>
     </div>
     <div class="footer">
         <a href="#header"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
