coloquei a area fale comigo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Github CLOPSO</title>
 </head>
 <body>
-    <div class="header" id="header">
+    <div id="header">
         <span class="name">Caio Lemes</span>
         <a class="contact" href="#falecmg">Fale comigo</a>
     </div>
@@ -24,11 +24,11 @@
             <p class="second">
                 Nascido em Londrina-PR no ano 2005.
                     <br>
-                Criado e morando em Rolândia-PR.
+                Atualmente morando em Rolândia-PR.
                     <br><br>
                 Desenvolvedor junior interessado em back-end.
                     <br>
-                Atualmente estudando <strong>C</strong> e <strong>HTML / CSS</strong>.
+                No momento estudando <strong>C</strong> e <strong>HTML / CSS</strong>.
                     <br><br>
                 Cursando o <strong>3° ano</strong> do ensino médio.
                     <br>
@@ -40,11 +40,20 @@
         </div>
     </div>
 
-    <div class="falecmg" id="falecmg">
-        <div class="twitter"></div>
-        <div class="discord"></div>
-        <div class="github"></div>
-        <div class="email"></div>
+    <div id="falecmg">
+        <a class="twitter">
+            <h2>Twitter</h2>
+        </a>
+        <span id="dc" style="visibility: hidden;">CLOPSO#0132</span>
+        <a class="discord">
+            <h2>Instagram</h2>
+        </a>
+        <a class="github">
+            <h2>Github</h2>
+        </a>
+        <a class="email">
+            <h2>Email</h2>
+        </a>
     </div>
     <div class="footer">
         <a href="#header"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
