--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <title>Github CLOPSO</title>
 </head>
 <body>
-    <div id="header">
+    <header id="header">
         <span class="name">Caio Lemes</span>
         <a class="contact" href="#falecmg">Fale comigo</a>
-    </div>
+    </header>
 
-    <div class="content">
+    <content class="content">
         <h1 class="main">Trabalhe<br>inteligente!</h1>
             <p class="second">
                 Nascido em Londrina-PR no ano 2005.
@@ -34,29 +34,36 @@
                     <br>
                 Trabalhando na Pado S.A. no setor PadoLabs.
                     <br><br>
-
-                
             </p>
         </div>
-    </div>
+    </content>
 
-    <div id="falecmg">
-        <a class="twitter">
-            <h2>Twitter</h2>
+    <section id="falecmg">
+        <a class="twitter" href="https://twitter.com/CLOPSO" rel="noopener" target="_blank">
+            <article>
+                <img src="img/twitter.svg" alt="icon twitter">
+                <h2>Twitter</h2>
+            </article>
         </a>
-        <span id="dc" style="visibility: hidden;">CLOPSO#0132</span>
-        <a class="discord">
-            <h2>Instagram</h2>
+        <a class="instagram" href="https://www.instagram.com/caio.lgds/" rel="noopener" target="_blank">
+            <article>
+                <img src="img/instagram.svg" alt="icon instagram">
+                <h2>Insta</h2>
+            </article>
         </a>
-        <a class="github">
-            <h2>Github</h2>
+        <a class="github" href="https://github.com/clopso" rel="noopener" target="_blank">
+            <article>
+                <img src="img/github.svg" alt="icon github">
+                <h2>Github</h2>
+            </article>
         </a>
-        <a class="email">
-            <h2>Email</h2>
+        <a class="email" href="mailto:caiolemes306@gmail.com" rel="noopener" target="_blank">
+            <article>
+                <img src="img/email.svg" alt="icon email">
+                <h2>Gmail</h2>
+            </article>
         </a>
-    </div>
-    <div class="footer">
-        <a href="#header"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
-    </div>
+    </section>
+    <a href="#header" class="footer"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
 </body>
 </html>
