adicionando função para o PG UP e DOWN

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                 case 38:
                     jump("header");
                     break;
+                case 33:
+                    jump("header");
+                    break;
+
+                case 34:
+                    jump("falecmg");
+                    break;
                 case 40:
                     jump("falecmg");
                     break;
