--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <br>
                 Atualmente morando em Rolândia-PR.
                     <br><br>
-                Desenvolvedor junior interessado em back-end.
+                Desenvolvedor junior interessado em firmware.
                     <br>
                 No momento estudando <strong>C</strong> e <strong>HTML / CSS</strong>.
                     <br><br>
