--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                     break;
 
                 case 34:
-                    jump("falecmg");
+                    jump("talk");
                     break;
                 case 40:
-                    jump("falecmg");
+                    jump("talk");
                     break;
             }
         });
@@ -37,58 +37,52 @@
         }
     </script>
 
-    <title>Github CLOPSO</title>
+    <title>clopso github</title>
 </head>
 <body>
     <header id="header">
         <span class="name">Caio Lemes</span>
-        <a class="contact" href="#falecmg">Fale comigo</a>
+        <a class="talk" href="#talk">Fale comigo!</a>
     </header>
 
     <content class="content">
         <h1 class="main">Trabalhe<br>inteligente!</h1>
-            <p class="second">
-                Nascido em Londrina-PR no ano 2005.
-                    <br>
-                Atualmente morando em Rolândia-PR.
-                    <br><br>
-                Desenvolvedor junior interessado em firmware.
-                    <br>
-                No momento estudando <strong>C</strong> e <strong>HTML / CSS</strong>.
-                    <br><br>
-                Cursando o <strong>3° ano</strong> do ensino médio.
-                    <br>
-                Trabalhando na Pado S.A. no setor PadoLabs.
-                    <br><br>
-            </p>
+        <p class="second">
+            Nascido em Londrina-PR no ano 2005.
+                <br>
+            Atualmente morando em <b>Rolândia-PR</b>.
+                <br><br>
+            Desenvolvedor de Sistemas Embarcados.
+                <br>
+            No momento estudando <b>C</b>, <b>JS</b> e <b>Python</b>.
+                <br><br>
+            Cursando <b>Eng. de Software</b> na UNOPAR.
+                <br>
+            Trabalhando como Dev na empresa PADO.
+                <br><br>
+        </p>
         </div>
     </content>
 
-    <section id="falecmg">
-        <a class="twitter" href="https://twitter.com/CLOPSO" rel="noopener" target="_blank">
-            <article>
-                <img src="img/twitter.svg" alt="icon twitter">
-                <h2>Twitter</h2>
-            </article>
-        </a>
-        <a class="instagram" href="https://www.instagram.com/caio.lgds/" rel="noopener" target="_blank">
-            <article>
-                <img src="img/instagram.svg" alt="icon instagram">
-                <h2>Insta</h2>
-            </article>
-        </a>
-        <a class="github" href="https://github.com/clopso" rel="noopener" target="_blank">
-            <article>
-                <img src="img/github.svg" alt="icon github">
-                <h2>Github</h2>
-            </article>
-        </a>
-        <a class="email" href="mailto:caiolemes306@gmail.com" rel="noopener" target="_blank">
-            <article>
-                <img src="img/email.svg" alt="icon email">
-                <h2>Gmail</h2>
-            </article>
-        </a>
+    <section id="talk">
+        <div id="cards">
+            <h1>Contatos</h1>
+            <div id="cardButtons">
+                <a href="https://github.com/clopso">GitHub</a>
+                <a href="https://twitter.com/clopso">Twitter</a>
+                <a href="https://www.instagram.com/caio.lgds/">Instagram</a>
+                <a href="https://www.linkedin.com/in/caio-lemes-8aa46825b/">LinkedIn</a>
+            </div>
+        </div>
+        <div id="cards">
+            <h1>Projetos</h1>
+            <div id="cardButtons">
+                <a href="https://github.com/clopso/tweetext">Tweetext</a>
+                <a href="https://github.com/clopso/shower-ideas">Shower Ideas</a>
+                <a href="https://github.com/clopso/hackathon-regga-me">Hackathon Regga-me</a>
+                <a href="https://github.com/clopso/commit-message-assistant">Commit Message Assistant</a>
+            </div>
+        </div>
     </section>
     <a href="#header" class="footer"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
 </body>
