--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script src="https://kit.fontawesome.com/b3f377d81a.js" crossorigin="anonymous"></script>
     <script src="./js/index.js"></script>
 
-    <title>clopso github</title>
+    <title>Caio Lemes - Portfólio</title>
 </head>
 <body>
     <header id="header">
         <span class="name">Caio Lemes</span>
-        <a class="talk" id="talkButton" href="#talk">Fale comigo!</a>
+        <a class="talk" id="talkButton" href="#talk">Meus Projetos!</a>
     </header>
 
     <content class="content">
@@ -40,25 +40,59 @@
     </content>
 
     <section id="talk">
-        <div id="cards">
-            <h1 id="contacts">Contatos</h1>
-            <div id="cardButtons">
-                <a href="https://github.com/clopso">GitHub</a>
-                <a href="https://www.linkedin.com/in/caio-lemes-8aa46825b/">LinkedIn</a>
-                <a href="https://www.instagram.com/caio.lgds/">Instagram</a>
-                <a href="https://twitter.com/clopso">Twitter</a>
-            </div>
-        </div>
-        <div id="cards">
-            <h1 id="projects">Projetos</h1>
-            <div id="cardButtons">
-                <a href="https://github.com/clopso/tweetext">Tweetext</a>
-                <a href="https://github.com/clopso/esp32-rfm69-ook-cloner">ESP32 RFM69 OOK Cloner</a>
-                <a href="https://github.com/clopso/commit-message-assistant">Commit Message Assistant</a>
-                <a href="https://github.com/clopso/leetcode-roadmap">LeetCode Roadmap</a>
+        <div class="projects-container">
+            <h1 class="section-title" id="section-title">Meus Projetos</h1>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <div class="project-image-container">
+                        <img src="https://placehold.co/600x400?text=Nick2Pic" alt="Nick2Pic" class="project-image">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Nick2Pic</h3>
+                        <p class="project-description">Nick2Pic é um aplicativo simples para gerar a imagem do seu nickname do seu personagem do Minecraft.</p>
+                        <div class="project-links">
+                            <a href="https://github.com/clopso/tweetext" class="project-link" target="_blank">
+                                <i class="fab fa-github"></i> Código
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="project-card">
+                    <div class="project-image-container">
+                        <img src="https://placehold.co/600x400?text=API+NodeJS+NestJS+TypeScript" alt="API RESTful com Node.js, NestJS e TypeScript" class="project-image">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">API RESTful com Node.js, NestJS e TypeScript - Curso Prático</h3>
+                        <p class="project-description">
+                        Projeto criado em curso focado na construção de uma API RESTful escalável e testável, aplicando DDD, Clean Architecture, Design Patterns, testes automatizados e princípios SOLID.
+                        </p>
+                        <div class="project-links">
+                            <a href="https://github.com/seu-usuario/seu-repositorio" class="project-link" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-github"></i> Código
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="project-card">
+                    <div class="project-image-container">
+                        <img src="https://placehold.co/600x400?text=Commit+Message+Assistant" alt="Commit Message Assistant" class="project-image">
+                    </div>
+                    <div class="project-content">
+                        <h3 class="project-title">Commit Message Assistant</h3>
+                        <p class="project-description">Ferramenta que ajuda a criar mensagens de commit padronizadas, informativas e engraçadas.</p>
+                        <div class="project-links">
+                            <a href="https://github.com/clopso/commit-message-assistant" class="project-link" target="_blank">
+                                <i class="fab fa-github"></i> Código
+                            </a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
     <a href="#header" class="footer"><i class="fas fa-arrow-circle-up fa-4x"></i></a>
 </body>
 <script src="./js/language.js"></script>
