update projects and stack

--- a/index.html
+++ b/index.html
@@ -23,19 +23,18 @@
     <content class="content">
         <h1 class="main" id="main">Trabalhe<br>inteligente!</h1>
         <p class="second" id="second">
-            Nascido em Londrina-PR no ano 2005.
-                <br>
-            Atualmente morando em <b>Rolândia-PR</b>.
-                <br><br>
-            Desenvolvedor de Sistemas Embarcados.
-                <br>
-            No momento estudando <b>C</b>, <b>JS</b> e <b>Python</b>.
-                <br><br>
-            Cursando <b>Eng. de Software</b> na UNOPAR.
-                <br>
-            Trabalhando como Dev na empresa PADO.
-                <br><br>
-        </p>
+            Nascido em 2005, Londrina-PR.<br>
+            Morando em <b>Rolândia-PR</b>.<br><br>
+
+            Desenvolvedor Fullstack.<br>
+            <b>Node.js</b>, <b>NestJS</b>, <b>React</b>.<br>
+            <b>Python</b>, <b>Express</b>, <b>MongoDB</b>.<br>
+            <b>Redis</b>, <b>Docker</b>, <b>Linux</b>.<br>
+            <b>GCP</b>, <b>Cloud Run</b>, <b>K8s</b>.<br><br>
+
+            Eng. de Software — UNOPAR.<br>
+            Desenvolvedor na <b>PADO</b>.<br><br>
+            </p>
         </div>
     </content>
 
@@ -45,13 +44,14 @@
             <div class="projects-grid">
                 <div class="project-card">
                     <div class="project-image-container">
-                        <img src="https://placehold.co/600x400?text=Nick2Pic" alt="Nick2Pic" class="project-image">
+                        <img src="https://placehold.co/600x400/white/333333?text=Nick2Pic" alt="Nick2Pic" class="project-image">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Nick2Pic</h3>
-                        <p class="project-description">Nick2Pic é um aplicativo simples para gerar a imagem do seu nickname do seu personagem do Minecraft.</p>
+                        <h3 class="project-title">Nick2Pic - Transforme seu nickname em foto!</h3>
+                        <p class="project-description">Aplicativo desenvolvido com ReactJS para gerar imagens personalizadas contendo o nickname de jogadores do Minecraft, usando a fonte Minecraftia. O projeto oferece geração dinâmica, download da imagem em PNG, e interface intuitiva com preview em tempo real.
+                        </p>
                         <div class="project-links">
-                            <a href="https://github.com/clopso/tweetext" class="project-link" target="_blank">
+                            <a href="https://github.com/clopso/nick2pic" class="project-link" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i> Código
                             </a>
                         </div>
@@ -60,15 +60,15 @@
                 
                 <div class="project-card">
                     <div class="project-image-container">
-                        <img src="https://placehold.co/600x400?text=API+NodeJS+NestJS+TypeScript" alt="API RESTful com Node.js, NestJS e TypeScript" class="project-image">
+                        <img src="https://placehold.co/600x400/white/333333?text=API+NestJS" alt="API RESTful com Node.js, NestJS e TypeScript" class="project-image">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">API RESTful com Node.js, NestJS e TypeScript - Curso Prático</h3>
+                        <h3 class="project-title">Curso Prático - API RESTful NestJS</h3>
                         <p class="project-description">
-                        Projeto criado em curso focado na construção de uma API RESTful escalável e testável, aplicando DDD, Clean Architecture, Design Patterns, testes automatizados e princípios SOLID.
+                        Projeto desenvolvido durante curso prático que foca na construção de uma API RESTful escalável, robusta e testável. Aplica conceitos avançados como Domain-Driven Design (DDD), Clean Architecture, Design Patterns, princípios SOLID e testes automatizados para garantir qualidade e manutenibilidade do código.
                         </p>
                         <div class="project-links">
-                            <a href="https://github.com/seu-usuario/seu-repositorio" class="project-link" target="_blank" rel="noopener noreferrer">
+                            <a href="https://github.com/clopso/nestjs-clean-arch" class="project-link" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i> Código
                             </a>
                         </div>
@@ -77,13 +77,15 @@
 
                 <div class="project-card">
                     <div class="project-image-container">
-                        <img src="https://placehold.co/600x400?text=Commit+Message+Assistant" alt="Commit Message Assistant" class="project-image">
+                        <img src="https://placehold.co/600x400/white/333333?text=C.M.A." alt="Commit Message Assistant" class="project-image">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Commit Message Assistant</h3>
-                        <p class="project-description">Ferramenta que ajuda a criar mensagens de commit padronizadas, informativas e engraçadas.</p>
+                        <p class="project-description">
+                            Aplicativo web criado com HTML, CSS e JavaScript puro para auxiliar desenvolvedores na criação de mensagens de commit padronizadas, criativas e divertidas. Oferece geração automática de mensagens com prefixos como <code>fix</code>, <code>feat</code> e <code>docs</code>, suporte a emojis e opções de personalização.
+                        </p>
                         <div class="project-links">
-                            <a href="https://github.com/clopso/commit-message-assistant" class="project-link" target="_blank">
+                            <a href="https://github.com/clopso/commit-message-assistant" class="project-link" target="_blank" rel="noopener noreferrer">
                                 <i class="fab fa-github"></i> Código
                             </a>
                         </div>
